# mbm-gpsd

./: INSTALL  Makefile.am  Makeversion  README.dbus  autogen.sh  configure.in  mbm_gpsd.pc.in  org.mbm.MbmGps.conf  org.mbm.MbmGps.service.in
initscript/Arch/: Makefile.am  mbm-gpsd.in
initscript/Debian/: Makefile.am  Makefile.in  mbm-gpsd
initscript/Gentoo/: Makefile.am  mbm-gpsd.in
initscript/Mandriva/: Makefile.am  mbm-gpsd.in
initscript/RedHat/: mbm-gpsd.in
initscript/SUSE/: Makefile.am  mbm-gpsd.in
initscript/Slackware/: Makefile.am  rc.mbm-gpsd.in
initscript/paldo/: Makefile.am  mbm-gpsd.in
introspection/: Makefile.am  all.xml  generic-types.xml  mbm-gps.xml  mbm-manager.xml  mbm-modem-error.xml  mbm-modem.xml  mbm-settings.xml
man/: Makefile.am  mbm_gpsd.8.in
marshallers/: Makefile.am  mbm-marshal-main.c
po/: POTFILES.in
policy/: Makefile.am  org.freedesktop.mbm_gpsd.system.policy
src/: ConnectionProfiles.csv  Makefile.am  convert_conpro.c  gps_settings.c  gps_settings.h  indent_src.sh  mbm-gpsd.conf  mbm_callback_info.c  mbm_callback_info.h  mbm_errors.c  mbm_errors.h  mbm_gpsd.c  mbm_gpsd_init  mbm_gpsd_type.h  mbm_manager.c  mbm_manager.h  mbm_modem.c  mbm_modem.h  mbm_nist_servers.h  mbm_options.c  mbm_options.h  mbm_parse.c  mbm_parse.h  mbm_serial.c  mbm_serial.h  mbm_supl.c  mbm_supl.h  setup_wdm.sh
test/: Makefile.am  mbm_gpsd.sh
utils/: 01mbm  10-mbm.fdi  99-mbm.rules  Makefile.am  mbm_powerstate  mbm_reset
